--- a/static/css/pages/learn.scss
+++ b/static/css/pages/learn.scss
@@ -56,6 +56,13 @@ h4 {
 		float: none;
 	}
 	.sidebar {
+		position: relative;
+		max-width: 100%; width:100%;
+		padding-bottom:0;
+		margin-bottom: $space32;
+		border-bottom: 1px solid #eee;
+	}
+	.sidebar .title {
 		display: none;
 	}
 }
